# epical

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.rst  pyproject.toml
docs/source/: conf.py  dataset.rst  index.rst  installation.rst  overview.rst  reference.rst  testdat.rst
docs/source/usage/: 01_Horvath13.rst  02_Horvath13_shrunk.rst  03_Horvath18.rst  04_Levine.rst  05_Hannum.rst  08_AltumAge.rst  09_Cortical.rst  09_Lu_DNAmTL.rst  10_MEAT.rst  10_PedWu.rst  11_EPM.rst  13_PedBE.rst  15_GA_Mayne.rst  16_GA_Lee_CPC.rst  19_Cortical.rst  20_EPM.rst  21_WLMT.rst  22_YOMT.rst  23_YOMT.rst  24_mmBlood.rst  24_mmLiver.rst  25_mmBlood.rst  Horvath13.rst
factory/methylclock_Rdata/: .Rapp.history  coefHannum.tsv  coefLevine.tsv  tranform.R
factory/methylclock_dat/: AltumAge.tsv  coefBohlin.tsv  coefCorticalClock.tsv  coefEN.tsv  coefEPIC.tsv  coefHannum.tsv  coefHorvath.tsv  coefHorvath_shrunk.tsv  coefKnightGA.tsv  coefLee_CPC.tsv  coefLee_RPC.tsv  coefLee_Sex.tsv  coefLee_refined_RPC.tsv  coefLevine.tsv  coefMayneGA.tsv  coefPedBE.tsv  coefSkin.tsv  coefTL.tsv  coefWu.tsv  pickle_methylSig.py
src/dmc/: DunedinPACE.py  __init__.py  clock_info.py  helpdoc.py  imputation.py  ireader.py  methylclocks.py  methyldat.py  tf_mse.py  utils.py
src/dmc/data/: AltumAge.pkl  AltumAge_cpg.pkl  CorticalClock.pkl  DunedinPACE.pkl  ENCen100.pkl  ENCen40.pkl  GA_Bohlin.pkl  GA_Haftorn.pkl  GA_Knight.pkl  GA_Lee_CPC.pkl  GA_Lee_RPC.pkl  GA_Lee_rRPC.pkl  GA_Lee_refined_RPC.pkl  Lin.pkl  (+25 more)
src/epical.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
